@@ -1,3 +1,9 @@
+2010-11-04  Romain Francois <romain@r-enthusiasts.com>
+
+    * inst/Rcpp/Module.h: experimental way to specify which constructor to use
+    in classes exposed by modules. This is still too restrictive as it only allows
+    one constructor only. 
+
 2010-11-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): Release 0.8.8
